<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/MENU"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="332dp"
        android:layout_marginBottom="667dp"
        android:background="@color/purple_500"
        android:backgroundTint="#832B2B"
        android:text="@string/menu"
        android:textColor="#E1BEE7"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Purchase"
        android:layout_width="109dp"
        android:layout_height="49dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="167dp"
        android:text="@string/Korzina"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/MENU"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/PIZZA_BLUCHEESE"
        android:layout_width="162dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="486dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BLUECHEESE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Purchase"
        app:layout_constraintVertical_bias="0.684"
        app:srcCompat="@drawable/pere_min"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/nothing" />

    <TextView
        android:id="@+id/BLUECHEESE"
        android:layout_width="78dp"
        android:layout_height="32dp"
        android:layout_marginStart="-35dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="585dp"
        android:text="@string/Cheese"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PIZZA_BLUCHEESE"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/opisanieCHEESE"
        android:layout_width="188dp"
        android:layout_height="124dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="480dp"
        android:text="@string/textCHEESE"
        android:textColor="#686666"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PIZZA_BLUCHEESE"
        app:layout_constraintTop_toBottomOf="@+id/BLUECHEESE" />

    <TextView
        android:id="@+id/_450_rub_BLUECHEESE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="259dp"
        android:layout_marginBottom="435dp"
        android:text="@string/Rubles_450"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PIZZA_BLUCHEESE"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/VETCHINA_GRIBS"
        android:layout_width="161dp"
        android:layout_height="148dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="213dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pizza_png44068"
        android:contentDescription="@string/vetchina" />

    <TextView
        android:id="@+id/vetchina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="371dp"
        android:text="@string/Vetchina"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/VETCHINA_GRIBS"
        app:layout_constraintTop_toBottomOf="@+id/opisanieCHEESE" />

    <TextView
        android:id="@+id/Opisanie_VETCHINA"
        android:layout_width="176dp"
        android:layout_height="113dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="271dp"
        android:text="@string/opisanie_Vetchina"
        android:textColor="#686666"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/VETCHINA_GRIBS"
        app:layout_constraintTop_toBottomOf="@+id/vetchina"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/_400_vetchina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="259dp"
        android:layout_marginBottom="205dp"
        android:text="@string/RUB_400_VETCHINA"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VETCHINA_GRIBS" />

    <Button
        android:id="@+id/Pokupka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="16dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/Pokupka"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_400_vetchina" />

    <TextView
        android:id="@+id/CONTINUE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="60dp"
        android:text="@string/CONTINUE"
        android:textColor="#434040"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/Pokupka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_400_vetchina"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/Ubavlenie"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#932C2C"
        android:text="@string/Ubavlenie"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/vetchina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/_450_rub_BLUECHEESE"
        app:layout_constraintTop_toBottomOf="@+id/opisanieCHEESE" />

    <TextView
        android:id="@+id/Colichestvo"
        android:layout_width="25dp"
        android:layout_height="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="32dp"
        android:text="@string/Colichestvo"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/vetchina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Ubavlenie"
        app:layout_constraintTop_toBottomOf="@+id/opisanieCHEESE" />

    <Button
        android:id="@+id/DOBAVLENIE"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#3F7530"
        android:text="@string/Dobavlenie"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/vetchina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Colichestvo"
        app:layout_constraintTop_toBottomOf="@+id/opisanieCHEESE" />

</androidx.constraintlayout.widget.ConstraintLayout>